test/1.4/errors/T_EABSTEMPLATE.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

template t1 {
    /// ERROR EABSTEMPLATE
    shared method m();
}

/// ERROR EABSTEMPLATE
port p {
    is t1;
}
